libs/iroha_smart_contract/tests/ui_fail/cant_filter_singular_query.stderr
error[E0599]: the method `filter` exists for struct `FindDomainById`, but its trait bounds were not satisfied
 --> tests/ui_fail/cant_filter_singular_query.rs:8:10
  |
7 | /     FindDomainById::new("domain".parse().unwrap())
8 | |         .filter(QueryOutputPredicate::Identifiable(
  | |         -^^^^^^ method cannot be called on `FindDomainById` due to unsatisfied trait bounds
  | |_________|
  |
  |
 ::: $WORKSPACE/libs/iroha_data_model/src/query/mod.rs
  |
  | /     queries! {
  | |         /// [`FindAllDomains`] Iroha Query finds all [`Domain`]s presented in Iroha [`Peer`].
  | |         #[derive(Copy, Display)]
  | |         #[display(fmt = "Find all domains")]
... |
  | |         }
  | |     }
  | |_____- doesn't satisfy `_: ExecuteIterableQueryOnHost`, `_: IterableQuery` or `_: Iterator`
  |
  = note: the following trait bounds were not satisfied:
          `iroha_smart_contract::prelude::FindDomainById: IterableQuery`
          which is required by `iroha_smart_contract::prelude::FindDomainById: iroha_smart_contract::ExecuteIterableQueryOnHost`
          `iroha_smart_contract::prelude::FindDomainById: Iterator`
          which is required by `&mut iroha_smart_contract::prelude::FindDomainById: Iterator`
